--- a/app/src/main/res/layout/activity_display_data.xml
+++ b/app/src/main/res/layout/activity_display_data.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/white"
     android:padding="10dp"
     tools:context=".Display_Data">
 
@@ -14,7 +15,7 @@
         android:layout_margin="10dp">
 
         <TextView
-            android:id="@+id/add_txt"
+            android:id="@+id/display_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
